fix: visible back numbers

--- a/style.css
+++ b/style.css
@@ -44,14 +44,17 @@
 }
 .flip.down .front:after,
 .flip.down .back:before {
+  color: var(--text-color);
   z-index: 1;
 }
 .flip.down.go .front:before {
+  color: var(--text-color);
   transform-origin: 50% 100%;
   animation: frontFlipDown 0.6s ease-in-out both;
   backface-visibility: hidden;
 }
 .flip.down.go .back:after {
+  color: var(--text-color);
   animation: backFlipDown 0.6s ease-in-out both;
 }
 .flip.up .front:after {
@@ -105,6 +108,9 @@
   100% {
     transform: perspective(160px) rotateX(0deg);
   }
+}
+.digital.back {
+  color: var(--bg-color);
 }
 .flip .number0:before,
 .flip .number0:after {
